--- a/AOS/app/src/main/res/navigation/nav_graph.xml
+++ b/AOS/app/src/main/res/navigation/nav_graph.xml
@@ -12,25 +12,41 @@
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_myChargerFragment"
-            app:destination="@id/myChargerListFragment" />
+            app:destination="@id/myChargerListFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_homeFragment_to_myPointFragment"
             app:destination="@id/myPointFragment" />
         <action
             android:id="@+id/action_homeFragment_to_myReservationFragment"
-            app:destination="@id/myReservationFragment" />
+            app:destination="@id/myReservationFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_homeFragment_to_registerChargerFragment"
-            app:destination="@id/registerChargerFragment" />
+            app:destination="@id/registerChargerFragment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_homeFragment_to_applyDetailFragment"
-            app:destination="@id/applyDetailFragment" />
+            app:destination="@id/applyDetailFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_homeFragment_to_paymentFailFragment"
-            app:destination="@id/paymentFailFragment" />
+            app:destination="@id/paymentFailFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
         <action
             android:id="@+id/action_homeFragment_to_paymentSuccessFragment"
-            app:destination="@id/paymentSuccessFragment" />
+            app:destination="@id/paymentSuccessFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/myChargerListFragment"
@@ -39,7 +55,11 @@
         tools:layout="@layout/fragment_my_charger_list">
         <action
             android:id="@+id/action_myChargerListFragment_to_myChargerFragment"
-            app:destination="@id/myChargerFragment" />
+            app:destination="@id/myChargerFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/myPointFragment"
@@ -63,10 +83,16 @@
         tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_signUpFragment"
-            app:destination="@id/signUpFragment" />
+            app:destination="@id/signUpFragment"
+            app:popUpTo="@id/signUpFragment"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -75,7 +101,13 @@
         tools:layout="@layout/fragment_sign_up">
         <action
             android:id="@+id/action_signUpFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/myChargerFragment"
@@ -89,7 +121,9 @@
         tools:layout="@layout/fragment_apply_detail">
         <action
             android:id="@+id/action_applyDetailFragment_to_applyTimeFragment"
-            app:destination="@id/applyTimeFragment" />
+            app:destination="@id/applyTimeFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/applyTimeFragment"
@@ -98,7 +132,9 @@
         tools:layout="@layout/fragment_apply_time">
         <action
             android:id="@+id/action_applyTimeFragment_to_applyCompleteFragment"
-            app:destination="@id/applyCompleteFragment" />
+            app:destination="@id/applyCompleteFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/applyCompleteFragment"
@@ -108,6 +144,8 @@
         <action
             android:id="@+id/action_applyCompleteFragment_to_homeFragment"
             app:destination="@id/homeFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
     </fragment>
